Fix static file caching issues

--- a/views/parentReadOnlyView.ejs
+++ b/views/parentReadOnlyView.ejs
@@ -22,6 +22,13 @@
     #imagePreview.show {
       opacity: 1;
     }
+        /* Thêm một số kiểu cho tổng tiền */
+    .total-amount {
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 1.2em;
+    text-align: right;
+  }
   </style>
 </head>
 <body>
