Fix static file caching issues

--- a/views/parentReadOnlyView.ejs
+++ b/views/parentReadOnlyView.ejs
@@ -23,7 +23,7 @@
       opacity: 1;
     }
         /* Thêm một số kiểu cho tổng tiền */
-    .total-amount {
+    .total-amount p {
     margin-top: 10px;
     font-weight: bold;
     font-size: 1.2em;
