--- a/public/styles.css
+++ b/public/styles.css
@@ -31,14 +31,8 @@ body {
     max-width: 100%;
     height: auto;
   }
-  p{
+  .parent-details p{
     text-align: center;
   }
-    /* Thêm một số kiểu cho tổng tiền */
-    .total-amount {
-    margin-top: 10px;
-    font-weight: bold;
-    font-size: 1.2em;
-    text-align: right;
-  }
+
   
