--- a/public/styles.css
+++ b/public/styles.css
@@ -35,4 +35,13 @@ body {
     text-align: center;
   }
 
-  
+  #imagePreview {
+    position: absolute !important;
+    max-width: 600px;
+    max-height: 600px;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: none;
+    z-index: 1000;
+    margin-top: 10px;
+  }
